// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-form-card-item-set.vue should be rendered correctly 1`] = `
<div
  class="root"
  data-z-form-card-item-set=""
>
  <div
    class="icon"
  >
    <v-icon-stub>
      M10 4a2 2 0 104 0 2 2 0 10-4 0M19 13v-2c-1.54.02-3.09-.75-4.07-1.83l-1.29-1.43c-.17-.19-.38-.34-.61-.45-.01 0-.01-.01-.02-.01H13c-.35-.2-.75-.3-1.19-.26C10.76 7.11 10 8.04 10 9.09V15c0 1.1.9 2 2 2h5v5h2v-5.5c0-1.1-.9-2-2-2h-3v-3.45c1.29 1.07 3.25 1.94 5 1.95zm-6.17 5c-.41 1.16-1.52 2-2.83 2-1.66 0-3-1.34-3-3 0-1.31.84-2.41 2-2.83V12.1a5 5 0 105.9 5.9h-2.07z
    </v-icon-stub>
  </div>
  <div
    class="content"
  >
    <!---->
     BATTLE AND ROMANCE
  </div>
</div>
`;

exports[`z-form-card-item-set.vue should be rendered correctly without icon 1`] = `
<div
  class="root"
  data-z-data-card-item=""
>
  <div
    class="icon"
  >
    <!---->
  </div>
  <div
    class="content"
  >
    <div
      class="text-caption label"
    >
    </div>
    <div
      class="text-body-2 text--primary value"
    >
      LADY MAY
    </div>
  </div>
</div>
`;

exports[`z-form-card-item-set.vue should be rendered correctly without slots 1`] = `
<div
  class="root"
  data-z-data-card-item=""
  icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
  value="THE SHOW"
>
  <div
    class="icon"
  >
    <v-icon-stub>
      M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z
    </v-icon-stub>
  </div>
  <div
    class="content"
  >
    <div
      class="text-caption label"
    >
    </div>
    <div
      class="text-body-2 text--primary value"
    >
      THE SHOW
    </div>
  </div>
</div>
`;
